test/neg/neg-serial9.errc
Argument to write must either be Serializable or an array of Serializable elements.
